[package]
name        = "chain-sdk"
version     = "0.1.0"
edition     = "2021"
description = "SDK for writing Qorvum chaincodes in Rust"
license = "Apache-2.0"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
