[package]
name        = "qorvum-consensus"
version     = "0.1.0"
edition     = "2021"
description = "HotStuff BFT and Raft consensus for Qorvum"
license = "Apache-2.0"

[dependencies]
qorvum-crypto = { workspace = true }
qorvum-ledger = { workspace = true }
tokio     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
bincode      = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
bytes     = { workspace = true }
