[package]
name        = "qorvum-crypto"
version     = "0.1.0"
edition     = "2021"
description = "Post-quantum cryptographic primitives for Qorvum"
license = "Apache-2.0"

[dependencies]
pqcrypto-dilithium   = { workspace = true }
pqcrypto-kyber       = { workspace = true }
pqcrypto-falcon      = { workspace = true }
pqcrypto-sphincsplus = { workspace = true }
pqcrypto-traits      = { workspace = true }
blake3    = { workspace = true }
zeroize   = { workspace = true }
subtle    = { workspace = true }
serde     = { workspace = true }
hex       = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
rand      = { workspace = true }
rand_core = { workspace = true }
