[package]
name        = "qorvum-ledger"
version     = "0.1.0"
edition     = "2021"
description = "Block storage, world state, and record model for Qorvum"
license = "Apache-2.0"

[features]
default       = ["memory-store"]
memory-store  = []
rocksdb-store = ["dep:rocksdb"]

[dependencies]
qorvum-crypto = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
bincode    = { workspace = true }
blake3     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }
bytes      = { workspace = true }
rocksdb    = { version = "0.21", optional = true }
