[package]
name        = "qorvum-msp"
version     = "0.1.0"
edition     = "2021"
description = "Membership Service Provider and PQ-PKI for Qorvum"
license = "Apache-2.0"

[dependencies]
qorvum-crypto = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
hex           = { workspace = true }
rand          = { workspace = true }
blake3        = { workspace = true }
zeroize       = { workspace = true }
aes-gcm       = { workspace = true }
base64        = { workspace = true }
tokio         = { workspace = true }

[dev-dependencies]
tempfile = "3"
