[package]
name        = "qorvum-network"
version     = "0.1.0"
edition     = "2021"
description = "P2P networking layer for Qorvum"
license = "Apache-2.0"

[dependencies]
qorvum-crypto = { workspace = true }
qorvum-msp    = { workspace = true }
tokio      = { workspace = true }
tonic      = { workspace = true }
serde      = { workspace = true }
bincode    = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
bytes      = { workspace = true }
libp2p     = { workspace = true }
sha2       = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
futures    = { workspace = true }
rand       = { workspace = true }
aes-gcm    = { workspace = true }
x25519-dalek = { workspace = true }
